--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/common.css">
-    <title>Bio Vault</title>
+    <title>BIO VAULT</title>
 </head>
 
 <body>
