--- a/products.html
+++ b/products.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@500&display=swap" rel="stylesheet">
     <title>Shop</title>
     <link rel="stylesheet" href="css/products.css">
     <link rel="stylesheet" href="css/common.css">
@@ -36,9 +38,9 @@
     <main>
         <template>
             <div class="item">
-                <img src="">
+                <img src="1mifs8.jpg">
                 <h2>Product's title</h2>
-                <h3>Price:<span>{Price}</span>DKK</h3>
+                <h3>Price:<br><span>{Price}</span>DKK</h3>
             </div>
         </template>
     </main>
