--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="background_shape">
             <svg viewbox="0 0 200 200" width="250px" height="240px">
-                <path d="M42.9,-66C56.6,-58.1,69.2,-47.7,73.2,-34.7C77.3,-21.6,72.9,-5.9,66.8,6.9C60.8,19.7,53,29.5,45.6,41.4C38.2,53.4,31.1,67.5,20.7,70.4C10.4,73.3,-3.1,65.1,-16.7,59.8C-30.3,54.6,-44,52.2,-53.7,44.6C-63.5,36.9,-69.3,23.8,-69.9,10.9C-70.4,-2,-65.6,-14.9,-57.9,-24.2C-50.1,-33.4,-39.4,-39.1,-29.3,-48.6C-19.2,-58.1,-9.6,-71.4,2.5,-75.3C14.7,-79.3,29.3,-73.9,42.9,-66Z" fill="#202020" />
+                <path d="M-9,542c124.08,7.57,175-22.82,198-54,19-25.76,25.32-60.71,68-96,27.84-23,53.27-31.51,62-34,33.44-9.58,60.86-6.14,74-5,69.84,6.05,163.68-15.73,210.51-62.24C641.87,252.68,633,212.2,650,170,678.69,98.62,770.34,21.74,1042-8L-9.4-8.55Z" fill="#556267"/>
             </svg>
         </div>
         <div class="logo">
