Some-text-styling

--- a/index.html
+++ b/index.html
@@ -17,32 +17,35 @@
     <header>
         <div class="background_shape">
             <svg viewbox="0 0 200 200" width="250px" height="240px">
-                <path d="M-9,542c124.08,7.57,175-22.82,198-54,19-25.76,25.32-60.71,68-96,27.84-23,53.27-31.51,62-34,33.44-9.58,60.86-6.14,74-5,69.84,6.05,163.68-15.73,210.51-62.24C641.87,252.68,633,212.2,650,170,678.69,98.62,770.34,21.74,1042-8L-9.4-8.55Z" fill="#556267"/>
+                <path d="M-9,542c124.08,7.57,175-22.82,198-54,19-25.76,25.32-60.71,68-96,27.84-23,53.27-31.51,62-34,33.44-9.58,60.86-6.14,74-5,69.84,6.05,163.68-15.73,210.51-62.24C641.87,252.68,633,212.2,650,170,678.69,98.62,770.34,21.74,1042-8L-9.4-8.55Z"/>
             </svg>
         </div>
         <div class="logo">
-            <img src="" alt="logo">
-            <h1>Bio vault</h1>
+            <img src="images/noname@2x.png" alt="logo">
+        </div>
+        <div class="name">
+        <img src="images/Artboard%205@2x.png" alt="name">
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#">PRODUCTS</a></li>
+                <li><a href="products.html">ABOUT US</a></li>
+                <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <div class="banner">
+            <img src="images/priscilla-du-preez-zH1Mqf6ojwU-unsplash.png" atl="banner">
 
         </div>
 
     </main>
 
     <div class="about">
-        <h2>About us</h2>
+        <h1>About us</h1>
         <div class="description">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic beatae vitae, necessitatibus aperiam explicabo dolores ex dicta nobis nisi atque dolorem itaque adipisci maxime, sunt a. Quidem beatae veniam at illum deleniti, eligendi, rerum commodi, natus, nesciunt expedita ipsum odio.</p>
         </div>
