--- a/products.html
+++ b/products.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <div class="best_sellers">
         <h2>Best sellers</h2>
         <div class="item1">
@@ -38,9 +37,10 @@
     <main>
         <template>
             <div class="item">
-                <img src="1mifs8.jpg">
                 <h2>Product's title</h2>
+                <img src="1mifs8.jpg">
                 <h3>Price:<br><span>{Price}</span>DKK</h3>
+                <button>Buy now</button>
             </div>
         </template>
     </main>
