--- a/products.html
+++ b/products.html
@@ -12,18 +12,22 @@
 </head>
 
 <body>
+    <h2>Best sellers</h2>
     <div class="best_sellers">
-        <h2>Best sellers</h2>
+
+
         <div class="item1">
-            <img src="" alt="">
+            <img src="images/brain illustration.png" alt="" width="150px" height="250px">
             <h3></h3>
         </div>
+
         <div class="item2">
-            <img src="" alt="">
+            <img src="images/brain illustration.png" alt="" width="150px" height="250px">
             <h3></h3>
         </div>
+
         <div class="item3">
-            <img src="" alt="">
+            <img src="images/brain illustration.png" alt="" width="150px" height="250px">
             <h3></h3>
         </div>
     </div>
@@ -38,7 +42,7 @@
         <template>
             <div class="item">
                 <h2>Product's title</h2>
-                <img src="1mifs8.jpg">
+                <img src="images/brain illustration.png" width="150px" height="250px">
                 <h3>Price:<br><span>{Price}</span>DKK</h3>
                 <button>Buy now</button>
             </div>
