header and footer ready

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/common.css">
     <title>BIO VAULT</title>
@@ -40,14 +38,18 @@
                 <img src="images/noname.svg" alt="logo">
             </div>
             <div class="name">
-                <img src="images/title.svg" alt="name">
+                <img src="images/brand%20name.svg" alt="name">
             </div>
+        </div>
+
+        <div class="mobile_logo">
+            <img src="images/logo_mobile.png">
         </div>
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">PRODUCTS</a></li>
-                <li><a href="products.html">ABOUT US</a></li>
+                <li><a href="#">ABOUT US</a></li>
+                <li><a href="products.html">PRODUCTS</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
@@ -72,9 +74,17 @@
 
     <footer>
         <p>Copyright &#169; 2020</p>
+
+        <div class="socials">
+            <a href="/"><img src=""></a>
+            <a href="/"><i class="fab fa-youtube"></i></a>
+            <a href="/"><i class="fab fa-instagram"></i></a>
+            <a href="/"><i class="fab fa-twitter"></i></a>
+            <a href="/"><i class="fab fa-facebook-f"></i></a>
+        </div>
     </footer>
 
-
+    <script src="https://kit.fontawesome.com/62614983e3.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
