--- a/products.html
+++ b/products.html
@@ -16,7 +16,8 @@
 
         <div class="logo_left">
             <div class="name">
-                <img src="images/brand%20name.svg" alt="name">
+                <a href="index.html">
+                    <img src="images/brand%20name.svg" alt="name"></a>
             </div>
         </div>
         <nav>
