--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 
         <div class="logo_left">
             <div class="logo">
-                <img src="images/noname.svg" alt="logo">
+                <a href="index.html">
+                    <img src="images/noname.svg" alt="logo"></a>
             </div>
             <div class="name">
-                <img src="images/brand%20name.svg" alt="name">
+                <a href="index.html">
+                    <img src="images/brand%20name.svg" alt="name"></a>
             </div>
         </div>
 
