best sellers buttons

--- a/products.html
+++ b/products.html
@@ -16,31 +16,36 @@
     <div class="best_sellers">
 
 
-        <div class="item1">
+        <div class="container">
+
             <img src="images/brain illustration.png" alt="" width="150px" height="250px">
-            <h3></h3>
+            <button class="btn">Read more</button>
         </div>
 
-        <div class="item2">
+        <div class="container">
             <img src="images/brain illustration.png" alt="" width="150px" height="250px">
-            <h3></h3>
+            <button class="btn">Read more</button>
         </div>
 
-        <div class="item3">
+        <div class="container">
             <img src="images/brain illustration.png" alt="" width="150px" height="250px">
-            <h3></h3>
+            <button class="btn">Read more</button>
         </div>
     </div>
-
     <div class="filters">
-        <button></button>
-        <button></button>
-        <button></button>
+        <details>
+            <summary>Sort by</summary>
+        </details>
+        <details>
+            <summary>Material</summary>
+        </details>
+        <details>
+            <summary>Components</summary>
+        </details>
     </div>
-
     <main>
         <template>
-            <div class="item">
+            <div class="product">
                 <h2>Product's title</h2>
                 <img src="images/brain illustration.png" width="150px" height="250px">
                 <h3>Price:<br><span>{Price}</span>DKK</h3>
