--- a/index.html
+++ b/index.html
@@ -60,18 +60,31 @@
             <img src="images/priscilla-du-preez-zH1Mqf6ojwU-unsplash.png" atl="banner">
         </div>
     </main>
-
-    <div class="about">
-        <h1>About us</h1>
+    <h1>About BIO VAULT</h1>
+<div class="copyw">
         <div class="description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic beatae vitae, necessitatibus aperiam explicabo dolores ex dicta nobis nisi atque dolorem itaque adipisci maxime, sunt a. Quidem beatae veniam at illum deleniti, eligendi, rerum commodi, natus, nesciunt expedita ipsum odio.</p>
+            <p>Bio Vault is the future of biochip implantation. Our brand exposure far exceeds any competitors. After years of research and testing we are produ to present you with the first functional BMI (brian machine interface) chip. The "Vault" was created to improve the life quality og humans and bring innovation to the medical system. Lorem Ipsum to be continued we need to do the testing.</p>
         </div>
-        <button>Find out more</button>
-        <div class="phone_app">
-            <img src="" alt="app">
-        </div>
+    <div class="description2">
+     <p>Once launched, this invasive brainwave-reading implant will see widespread mainstream use and will forever change the norms and customs of our society. In this regard, we believe that the only thing separating a positive outcome from a negative one is a well informed public, fully aware of the potential nefarious uses of the BMI.</p>
     </div>
+    </div>
+        <div class="banner2">
+            <img src="images/Banner2@2x.png" alt="banner2">
+        </div>
+     <h1>CONTROL AND GENERATE</h1>
+    <div class="moretext">
+        <div class="p2">
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic beatae vitae, necessitatibus aperiam explicabo dolores ex dicta nobis nisi atque dolorem itaque adipisci maxime, sunt a. Quidem beatae veniam at illum deleniti, eligendi, rerum commodi, natus, nesciunt expedita ipsum odio.
 
+        This information, centered around a neural lace implant developed by New West Industries and known as the BMI (Brain Machine Interface), has mind-bending capabilities which we believe could be either liberating or calamitous for its users. </p>
+            <div class="button">
+                  <button>FIND OUT MORE</button>
+        </div>
+        </div>
+ <div class="phone_app">
+     <img src="images/iPhone%20X,%20XS,%2011%20Pro%20%E2%80%93%201@2x.png" alt="app"></div>
+    </div>
     <footer>
         <p>Copyright &#169; 2020</p>
 
