--- a/products.html
+++ b/products.html
@@ -43,14 +43,23 @@
             <summary>Components</summary>
         </details>
     </div>
+    <div class="categories">
+               <h2>Categories</h2>
+               <ul>
+                   <li>Medical Care</li>
+                   <li>Personal Use</li>
+                   <li>Professional Use</li>
+               </ul>
+           </div>
     <main>
         <template>
             <div class="product">
                 <h2>Product's title</h2>
                 <img src="images/brain illustration.png" width="150px" height="250px">
                 <h3>Price:<br><span>{Price}</span>DKK</h3>
-                <button>Buy now</button>
+                <button>Read more</button>
             </div>
+
         </template>
     </main>
 
