--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="#">ABOUT US</a></li>
                 <li><a href="products.html">PRODUCTS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
