contact page + hover of social media

--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,45 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="#">ABOUT US</a></li>
                 <li><a href="products.html">PRODUCTS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="contact.html" class="active">CONTACT</a></li>
             </ul>
         </nav>
     </header>
 
+    <div class="grid">
+        <div class="inner">
+            <div class="illustration">
+                <img src="images/contact_illustration.svg">
+            </div>
+            <div class="right">
+                <div class="summary">
+                    <h1>Information</h1>
+                    <p>To find out more about our products, or to clarify any questions you might have, feel free to contact us either via email or call us during our business hours.</p>
+                    <p>To sponsor us or work alongside us, please send us an email with our <a href="">business template</a> filled and attached.</p>
+                </div>
+                <div class="details">
+                    <h2>Business hours</h2>
+                    <h3>Telephone consultation:</h3>
+                    <ul>
+                        <li>Monday - Thursday: 9-11</li>
+                        <li>Friday: 10-12</li>
+                    </ul>
+                    <h3>Office's hours:</h3>
+                    <ul>
+                        <li>Monday - Thursday: 9-15</li>
+                        <li>Friday: 10-14</li>
+                    </ul>
+                </div>
+                <div class="information">
+                    <h2>Contact information</h2>
+                    <ul>
+                        <li>contact@biovault.dk</li>
+                        <li>+45 90 86 86 86</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <p>Copyright &#169; 2020</p>
