--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="index.html" class="active">HOME</a></li>
                 <li><a href="#">ABOUT US</a></li>
                 <li><a href="products.html">PRODUCTS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
