--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="#">ABOUT US</a></li>
-                <li><a href="products.html">PRODUCTS</a></li>
+                <li><a href="products.html" class="active">PRODUCTS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
