--- a/about.html
+++ b/about.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="css/about.css">
+      <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/common.css">
-    <title>BIO VAULT</title>
 </head>
 
 <body>
-    <div class="background_shape">
+       <div class="background_shape">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1080 842">
             <defs>
                 <style>
@@ -55,54 +54,27 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        <div class="banner">
-            <img src="images/priscilla-du-preez-zH1Mqf6ojwU-unsplash.png" atl="banner">
+     <div class="bannerinfo">
+            <img src="images/Banner2%20%E2%80%93%202@2x.png" alt="banner">
         </div>
-    </main>
     <h1>About BIO VAULT</h1>
-    <div class="rightL">
-        <img src="images/right@2x.png" alt="rightline">
-    </div>
-    <div class="copyw">
         <div class="description">
             <h2>Who</h2>
             <p>We like to think of us as the future of biochip implantation. After years of research and testing we are proud to present you with the first functional BMI (brian machine interface) chip. The "Vault" was created to improve your life quality and bring innovation to the medical system. Once launched, this invasive brainwave-reading implant will see widespread mainstream use and will forever change the norms and customs of our society.</p>
         </div>
-        <div class="mbi">
-            <img src="images/mbn.png" alt="chiplook">
-        </div>
+        <div class="rightL">
+        <img src="images/left@2x.png" alt="rightline">
+    </div>
+     <div class="bannerteam">
+         <img src="images/Banner2%20%E2%80%93%201@2x.png" alt="banner3">
+    </div>
         <div class="description2">
             <h2>HOW</h2>
             <p>The "Vault" is a microchip connected to an array of three mashes placed under the skin. The implant does not require complex medical procedures and it is pain free. In order to work correctly, it has to be placed in the temple or at the back of your neck. The sensors within the mashes collect information from the brainwaves and send it to our cloudbase processing system, where it is decoded. The microchip is powered by the electricity within our brains so you will never have to worry about recharging. </p>
         </div>
-    </div>
-    <div class="banner2">
-        <img src="images/Banner2@2x.png" alt="banner2">
-    </div>
-    <h1>CONTROL AND GENERATE</h1>
-    <div class="leftL">
-        <img src="images/left@2x.png" alt="leftline">
-    </div>
-    <div class="moretext">
-        <div class="p2">
-            <p>You can use our app to connect to your BMI and customize what your chip does and how it does it. You can access live data on your biological parameters and check if everything is working properly. The information can be redirected to your personal doctor before a control or on a regular basis. The chip was built for recreational purposes as well, and you can generate experiences based on the brainwaves, so if you feel like seeing a forest and a lake, now it is only a tap away.</p>
-                        <div class="button">
-                <button>FIND OUT MORE</button>
-            </div>
-            <div class="list">
-            <h3>01. Login and Connect with Touch ID</h3>
-            <h3>02. Configure Your Preferances</h3>
-            <h3>03. Body Data Live View</h3>
-            <h3>04. Generate Experience</h3>
-</div>
-        </div>
-        <div class="phone_app">
-            <img src="images/iPhone%20X,%20XS,%2011%20Pro%20%E2%80%93%201@2x.png" alt="app">
-        </div>
-    </div>
-    <footer>
+    </main>
+      <footer>
         <p>Copyright &#169; 2020</p>
 
         <div class="socials">
@@ -115,4 +87,5 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/62614983e3.js" crossorigin="anonymous"></script>
-</body></html>
+</body>
+</html>
