--- a/products.html
+++ b/products.html
@@ -50,33 +50,32 @@
         </div>
     </div>
     <div class="filtration">
-        <div class="categories">
-            <h2>Categories</h2>
-            <ul>
-                <li>Medical Care</li>
-                <li>Personal Use</li>
-                <li>Professional Use</li>
-            </ul>
-        </div>
+
         <div class="filters">
             <details>
                 <summary>Sort by</summary>
-                <button>Price: lowest first</button>
-                <button>Price: highest first</button>
+                <div class="button">
+                    <button>Price: lowest first</button>
+                    <button>Price: highest first</button>
+                </div>
             </details>
             <details>
                 <summary>Material</summary>
-                <button>steel</button>
-                <button>aluminium</button>
-                <button>plastic</button>
+                <div class="button">
+                    <button>steel</button>
+                    <button>aluminium</button>
+                    <button>plastic</button>
+                </div>
             </details>
             <details>
                 <summary>Components</summary>
-                <button>Rigid-PCB</button>
-                <button>Flexible-PCB</button>
-                <button>Flex-PCB</button>
-                <button>High-frequency-PCB</button>
-                <button>Aluminium-PCB</button>
+                <div class="button">
+                    <button>Rigid-PCB</button>
+                    <button>Flexible-PCB</button>
+                    <button>Flex-PCB</button>
+                    <button>High-frequency-PCB</button>
+                    <button>Aluminium-PCB</button>
+                </div>
             </details>
         </div>
     </div>
@@ -85,7 +84,7 @@
             <div class="product">
                 <h2>Product's title</h2>
                 <img src="images/brain illustration.png" width="150px" height="250px">
-                <h3>Price:<br><span>{Price}</span>DKK</h3>
+                <h3><br><span>{Price}</span>DKK</h3>
                 <button id="modal-btn">Read more</button>
             </div>
 
@@ -120,6 +119,4 @@
 
     <script src="https://kit.fontawesome.com/62614983e3.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
