--- a/about.html
+++ b/about.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="css/about.css">
-      <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-       <div class="background_shape">
+    <div class="background_shape">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1080 842">
             <defs>
                 <style>
                     .cls-1 {
                         fill: url(#linear-gradient);
                     }
+
                 </style>
                 <linearGradient id="linear-gradient" x1="-4943.63" y1="1922.01" x2="-4943.63" y2="1920.99" gradientTransform="matrix(972, 0, 0, -540.46, 4805721.4, 1038759.02)" gradientUnits="userSpaceOnUse">
                     <stop offset="0" stop-color="#33536c" />
@@ -48,33 +50,33 @@
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="about.html" class="active">ABOUT US</a></li>
                 <li><a href="products.html">PRODUCTS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
     <main>
-     <div class="bannerinfo">
+        <div class="bannerinfo">
             <img src="images/Banner2%20%E2%80%93%202@2x.png" alt="banner">
         </div>
-    <h1>About BIO VAULT</h1>
+        <h1>About BIO VAULT</h1>
         <div class="description">
             <h2>Who</h2>
             <p>We like to think of us as the future of biochip implantation. After years of research and testing we are proud to present you with the first functional BMI (brian machine interface) chip. The "Vault" was created to improve your life quality and bring innovation to the medical system. Once launched, this invasive brainwave-reading implant will see widespread mainstream use and will forever change the norms and customs of our society.</p>
         </div>
         <div class="rightL">
-        <img src="images/left@2x.png" alt="rightline">
-    </div>
-     <div class="bannerteam">
-         <img src="images/Banner2%20%E2%80%93%201@2x.png" alt="banner3">
-    </div>
+            <img src="images/left@2x.png" alt="rightline">
+        </div>
+        <div class="bannerteam">
+            <img src="images/Banner2%20%E2%80%93%201@2x.png" alt="banner3">
+        </div>
         <div class="description2">
             <h2>HOW</h2>
             <p>The "Vault" is a microchip connected to an array of three mashes placed under the skin. The implant does not require complex medical procedures and it is pain free. In order to work correctly, it has to be placed in the temple or at the back of your neck. The sensors within the mashes collect information from the brainwaves and send it to our cloudbase processing system, where it is decoded. The microchip is powered by the electricity within our brains so you will never have to worry about recharging. </p>
         </div>
     </main>
-      <footer>
+    <footer>
         <p>Copyright &#169; 2020</p>
 
         <div class="socials">
@@ -88,4 +90,5 @@
 
     <script src="https://kit.fontawesome.com/62614983e3.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
