--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">ABOUT US</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
                 <li><a href="products.html">PRODUCTS</a></li>
                 <li><a href="contact.html" class="active">CONTACT</a></li>
             </ul>
