--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">ABOUT US</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
                 <li><a href="products.html" class="active">PRODUCTS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
@@ -119,4 +119,6 @@
 
     <script src="https://kit.fontawesome.com/62614983e3.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
