--- a/index.html
+++ b/index.html
@@ -94,18 +94,20 @@
         <img src="images/left@2x.png" alt="leftline">
     </div>
     <div class="moretext">
-        <div class="p2">
-            <p>You can use our app to connect to your BMI and customize what your chip does and how it does it. You can access live data on your biological parameters and check if everything is working properly. The information can be redirected to your personal doctor before a control or on a regular basis. The chip was built for recreational purposes as well, and you can generate experiences based on the brainwaves, so if you feel like seeing a forest and a lake, now it is only a tap away.</p>
-            <div class="button">
-                <button><a href="about.html">FIND OUT MORE</a> </button>
-            </div>
+        <div class="box">
             <div class="list">
                 <h3>01. Login and Connect with Touch ID</h3>
                 <h3>02. Configure Your Preferances</h3>
                 <h3>03. Body Data Live View</h3>
                 <h3>04. Generate Experience</h3>
             </div>
+            <div class="p2">
+                <p>You can use our app to connect to your BMI and customize what your chip does and how it does it. You can access live data on your biological parameters and check if everything is working properly. The information can be redirected to your personal doctor before a control or on a regular basis. The chip was built for recreational purposes as well, and you can generate experiences based on the brainwaves, so if you feel like seeing a forest and a lake, now it is only a tap away.</p>
+                <div class="button">
+                    <a href="about.html"><button class="button-inner">FIND OUT MORE</button></a>
+                </div>
 
+            </div>
         </div>
         <div class="phone_app">
             <img src="images/iPhone%20X,%20XS,%2011%20Pro%20%E2%80%93%201@2x.png" alt="app">
