best sellers pic

--- a/products.html
+++ b/products.html
@@ -35,17 +35,17 @@
 
         <div class="container">
 
-            <img src="images/brain illustration.png" alt="" width="150px" height="250px">
+            <img src="product_images/epoch.jpg" alt="" width="150px" height="250px">
             <button class="btn">Read more</button>
         </div>
 
         <div class="container">
-            <img src="images/brain illustration.png" alt="" width="150px" height="250px">
+            <img src="product_images/aurora.jpg" alt="" width="150px" height="250px">
             <button class="btn">Read more</button>
         </div>
 
         <div class="container">
-            <img src="images/brain illustration.png" alt="" width="150px" height="250px">
+            <img src="product_images/halcyon-high-frequency.jpg" alt="" width="150px" height="250px">
             <button class="btn">Read more</button>
         </div>
     </div>
