--- a/products.html
+++ b/products.html
@@ -84,7 +84,7 @@
             <div class="product">
                 <h2>Product's title</h2>
                 <img src="images/brain illustration.png" width="150px" height="250px">
-                <h3><br><span>{Price}</span>DKK</h3>
+                <div class="price"><span>{Price}</span>DKK</div>
                 <button id="modal-btn">Read more</button>
             </div>
 
